# m.Stock-Interface

./: .env  .env.example  .gitignore  .tokens.json  README.md  interface.py  m1.py  m2.py  pyproject.toml  requirements.txt
.bmad-core/: install-manifest.yaml
docs/: brownfield-architecture.md  prd.md
docs/architecture/: checklist-results-report.md  coding-standards.md  component-architecture.md  enhancement-scope-and-integration-strategy.md  existing-project-analysis.md  index.md  infrastructure-and-deployment-integration.md  introduction.md  security-integration.md  source-tree.md  tech-stack-alignment.md  testing-strategy.md
docs/prd/: epic-and-story-structure.md  index.md  intro-project-analysis-and-context.md  requirements.md  technical-constraints-and-integration-requirements.md
docs/qa/assessments/: 1.1-nfr-20250902.md  1.1-risk-20250902.md  1.1-test-design-20250902.md  1.2-risk-20250902.md  1.2-test-design-20250902.md  1.3-nfr-20250903.md  1.3-risk-20250903.md  1.3-test-design-20250903.md
docs/qa/gates/: 1.1-establish-a-testing-framework.yml  1.2-refactor-for-maintainability.yml  1.3-implement-request-throttling-and-timing-middleware.yml
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md
logs/: backend.log.2025-08-27
src/: main.py  models.py  security.py  settings.py
src/mstock_interface.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_interface.py  test_main.py
