[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mstock_interface"
version = "0.1.0"
authors = [
  { name="Karan Parikh", email="karan.parikh@stormsparkinnovations.com" },
]
description = "A Python interface for m.Stock (Mirae Asset) Broker's Type A api"
readme = "README.md"
requires-python = ">=3.11"
license = Mozilla Public License, v2
license-files = ["LICENSE.md"]
keywords = ["m.stock", "mstock"]
dependencies = [
    "fastapi==0.115.2",
    "starlette==0.37.2",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "APScheduler==3.10.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "mStock-TradingApi-A==0.1.1",
    "pyopenssl==24.2.1",
    "cryptography==43.0.1",
    "service-identity==24.1.0",
    "websockets==12.0",
    "pytest",
    "slowapi",
]

[tool.setuptools.packages.find]
where = ["src"]
